# TouchDeck

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
assets/: apps.json
config/: settings.json
touchdeck/: __main__.py  app.py
touchdeck/core/: application.py  layout.py  navigation.py  services.py  window.py
touchdeck/enums/: __init__.py
touchdeck/models/: app_entry.py  page.py  settings.py  theme.py
touchdeck/pages/: home.py  power.py  settings.py
touchdeck/services/: config.py  launcher.py  navigation.py  settings.py  theme.py
touchdeck/styles/: dark.css
touchdeck/widgets/: app_grid.py  app_tile.py  bottom_bar.py  header.py
