[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "touchdeck"
version = "0.1.0"
description = "A modular touch-first shell for Raspberry Pi and Linux."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
{ name = "TouchDeck Contributors" }
]

keywords = [
"raspberry-pi",
"wayland",
"gtk4",
"libadwaita",
"launcher",
"dashboard",
"touch",
"linux"
]

classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Environment :: X11 Applications :: GTK",
"Intended Audience :: Developers",
"License :: OSI Approved :: MIT License",
"Operating System :: POSIX :: Linux",
"Programming Language :: Python :: 3",
"Topic :: Desktop Environment",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
"E",
"F",
"I",
"UP",
"B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"

strict = true

warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

disallow_untyped_defs = true
disallow_incomplete_defs = true

check_untyped_defs = true

no_implicit_optional = true

pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
